--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   "dependencies": {
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.4.1",
     "chalk": "^3.0.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "mongoose": "^5.8.10",
     "passport": "^0.4.1"
   }
