--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
+    "chai": "^4.2.0",
     "chalk": "^3.0.0",
     "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
@@ -29,6 +31,7 @@
     "fs": "0.0.1-security",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
+    "mocha": "^7.0.1",
     "moment": "^2.24.0",
     "mongoose": "^5.8.10",
     "multer": "^1.4.2",
