--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
+    "popper.js": "^1.16.1",
     "validator": "^12.2.0"
   }
 }
