--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "prestart": "next build",
+    "build": "next build"
     "start": "node app.js",
     "test": "mocha"
   },
