--- a/package.json
+++ b/package.json
@@ -41,5 +41,6 @@
     "passport-local-mongoose": "^6.0.1",
     "popper.js": "^1.16.1",
     "validator": "^12.2.0"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
