--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.17.0",
     "fs": "0.0.1-security",
+    "hookrouter": "^1.2.3",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
     "mocha": "^7.0.1",
@@ -40,6 +41,8 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
     "popper.js": "^1.16.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "validator": "^12.2.0"
   },
   "proxy": "http://localhost:3001"
