--- a/package.json
+++ b/package.json
@@ -32,14 +32,17 @@
     "express": "^4.17.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.0",
+    "form-urlencoded": "^4.1.3",
     "fs": "0.0.1-security",
     "hookrouter": "^1.2.3",
     "jquery": "^3.4.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mocha": "^7.0.1",
     "moment": "^2.24.0",
     "mongoose": "^5.8.10",
     "multer": "^1.4.2",
+    "multiparty": "^4.2.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
