--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "popper.js": "^1.16.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-spinners": "^0.8.0",
     "validator": "^12.2.0"
   },
   "proxy": "http://localhost:3001"
