--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "chalk": "^3.0.0",
+    "cloudinary": "^1.19.0",
     "connect-mongo": "^3.2.0",
     "cors": "^2.8.5",
+    "datauri": "^2.0.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
