--- a/client/package.json
+++ b/client/package.json
@@ -20,12 +20,14 @@
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.12.0",
     "react-hook-form": "^4.10.1",
     "react-responsive": "^8.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-spinners": "^0.8.0",
+    "reactjs-popup": "^1.5.0",
     "styled-components": "^5.0.1"
   },
   "scripts": {
