--- a/client/package.json
+++ b/client/package.json
@@ -17,12 +17,15 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "form-urlencoded": "^4.1.3",
+    "ionicons": "^5.0.1",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.12.0",
     "react-hook-form": "^4.10.1",
+    "react-icons": "^3.9.0",
+    "react-ionicons": "^3.1.4",
     "react-responsive": "^8.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
