--- a/client/package.json
+++ b/client/package.json
@@ -34,7 +34,7 @@
     "styled-components": "^5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts build",
     "build": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
