--- a/client/package.json
+++ b/client/package.json
@@ -34,8 +34,8 @@
     "styled-components": "^5.0.1"
   },
   "scripts": {
-    "start": "react-scripts build",
-    "build": "react-scripts start",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
