--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "styled-components": "^5.0.1"
   },
   "scripts": {
+    "preinstall": "rm -rf node_modules && rm package-lock.json && npm cache clear --force && npm install",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
