--- a/package.json
+++ b/package.json
@@ -1,58 +1,57 @@
 {
-  "name": "twitter-clone",
-  "version": "1.0.0",
+  "name": "client",
+  "version": "0.1.0",
+  "private": true,
   "engines": {
     "node": "12.14.1"
   },
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "start": "node app.js",
-    "test": "mocha"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/superbahbi/twitter-clone.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/superbahbi/twitter-clone/issues"
-  },
-  "homepage": "https://github.com/superbahbi/twitter-clone#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
-    "body-parser": "^1.19.0",
-    "chai": "^4.2.0",
-    "chalk": "^3.0.0",
-    "cloudinary": "^1.19.0",
-    "connect-mongo": "^3.2.0",
-    "cors": "^2.8.5",
-    "datauri": "^2.0.0",
-    "dotenv": "^8.2.0",
-    "ejs": "^3.0.1",
-    "express": "^4.17.1",
-    "express-flash": "0.0.2",
-    "express-session": "^1.17.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "form-urlencoded": "^4.1.3",
-    "fs": "0.0.1-security",
-    "hookrouter": "^1.2.3",
+    "ionicons": "^5.0.1",
     "jquery": "^3.4.1",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
-    "mocha": "^7.0.1",
     "moment": "^2.24.0",
-    "mongoose": "^5.8.10",
-    "multer": "^1.4.2",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.0.1",
-    "popper.js": "^1.16.1",
-    "react-router": "^5.1.2",
+    "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.17",
+    "react-dom": "^16.12.0",
+    "react-hook-form": "^4.10.1",
+    "react-icons": "^3.9.0",
+    "react-ionicons": "^3.1.4",
+    "react-responsive": "^8.0.3",
     "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0",
     "react-spinners": "^0.8.0",
-    "validator": "^12.2.0"
+    "reactjs-popup": "^1.5.0",
+    "styled-components": "^5.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
