--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "client",
+  "name": "twitter-clone-web",
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "12.14.1"
+    "node": "v16.15.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.1",
@@ -14,9 +14,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
+    "axios": "^0.27.2",
     "bootstrap": "^4.4.1",
-    "form-urlencoded": "^4.1.3",
+    "form-urlencoded": "^6.0.6",
     "ionicons": "^5.0.1",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
@@ -25,16 +25,16 @@
     "react-dom": "^16.12.0",
     "react-hook-form": "^4.10.1",
     "react-icons": "^3.9.0",
-    "react-ionicons": "^3.1.4",
+    "react-ionicons": "^1.4.6",
     "react-responsive": "^8.0.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^2.1.3",
     "react-spinners": "^0.8.0",
     "reactjs-popup": "^1.5.0",
     "styled-components": "^5.0.1"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
