--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "^2.1.3",
     "react-spinners": "^0.8.0",
     "reactjs-popup": "^1.5.0",
+    "socket.io-client": "^4.5.1",
     "styled-components": "^5.0.1"
   },
   "scripts": {
