--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-responsive": "^8.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^2.1.3",
+    "react-select": "^5.3.2",
     "react-spinners": "^0.8.0",
     "reactjs-popup": "^1.5.0",
     "socket.io-client": "^4.5.1",
