--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.8",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
     "axios": "^0.27.2",
     "bootstrap": "^4.4.1",
     "bson": "^4.6.4",
@@ -21,9 +18,9 @@
     "ionicons": "^5.0.1",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
-    "react": "^16.12.0",
+    "react": "^18.1.0",
     "react-bootstrap": "^1.0.0-beta.17",
-    "react-dom": "^16.12.0",
+    "react-dom": "^18.1.0",
     "react-hook-form": "^4.10.1",
     "react-icons": "^3.9.0",
     "react-ionicons": "^1.4.6",
@@ -34,7 +31,8 @@
     "react-spinners": "^0.8.0",
     "reactjs-popup": "^1.5.0",
     "socket.io-client": "^4.5.1",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "styled-map": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -56,5 +54,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^8.13.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "jest-dom": "^4.0.0",
+    "prettier": "2.6.2"
   }
 }
