--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "node": "v16.15.0"
   },
   "dependencies": {
+    "@testing-library/dom": "^8.13.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
     "@fortawesome/fontawesome-free": "^5.12.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
@@ -56,7 +59,6 @@
     ]
   },
   "devDependencies": {
-
     "jest-dom": "^4.0.0",
     "prettier": "2.6.2"
   }
