fix mobile moment timestamp

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ionicons": "^5.0.1",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
+    "moment-twitter": "^0.2.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
