--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.8",
+    "@tanstack/react-query": "^4.0.10",
+    "@tanstack/react-query-devtools": "^4.0.10",
     "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -30,7 +32,6 @@
     "react-ionicons": "^1.4.6",
     "react-jwt": "^1.1.6",
     "react-loading-skeleton": "^3.1.0",
-    "react-query": "^4.0.0-beta.23",
     "react-responsive": "^8.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
