--- a/web/package.json
+++ b/web/package.json
@@ -35,7 +35,8 @@
     "reactjs-popup": "^1.5.0",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.0.1",
-    "styled-map": "^3.3.0"
+    "styled-map": "^3.3.0",
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -59,6 +60,12 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.6.2",
+    "@types/react": "^18.0.15",
+    "@types/react-bootstrap": "^0.32.30",
+    "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.25",
     "jest-dom": "^4.0.0",
     "prettier": "2.6.2"
   }
