--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^4.6.1",
     "bson": "^4.6.4",
+    "dayjs": "^1.11.4",
     "form-urlencoded": "^6.0.6",
     "ionicons": "^5.0.1",
     "jquery": "^3.4.1",
