--- a/app/package.json
+++ b/app/package.json
@@ -8,38 +8,38 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/webpack-config": "~0.16.2",
-    "@react-native-async-storage/async-storage": "^1.17.7",
+    "@expo/webpack-config": "^0.17.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/drawer": "^5.8.3",
+    "@react-navigation/native": "react-navigation/native",
+    "@react-navigation/stack": "^6.2.2",
     "axios": "^0.21.2",
-    "expo": "^45.0.0",
-    "expo-constants": "~13.1.1",
-    "expo-image-picker": "~13.1.1",
+    "expo": "^46.0.2",
+    "expo-constants": "~13.2.3",
+    "expo-image-picker": "~13.3.1",
     "expo-permissions": "~13.2.0",
     "form-urlencoded": "^6.0.6",
     "moment": "^2.29.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.3",
     "react-native-dotenv": "^3.3.1",
     "react-native-elements": "^2.0.2",
-    "react-native-gesture-handler": "~2.2.1",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-gifted-chat": "^0.16.3",
-    "react-native-reanimated": "^2.8.0",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-web": "~0.18.7",
     "react-navigation": "^4.3.9",
-    "react-navigation-drawer": "^2.5.0",
-    "react-navigation-stack": "^2.7.0",
     "react-navigation-tabs": "^2.8.13",
     "socket.io-client": "^2.3.0",
     "webpack-dev-server": "~3.11.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "babel-preset-expo": "~9.1.0"
+    "@babel/core": "^7.18.6",
+    "babel-preset-expo": "~9.2.0"
   },
   "private": true
 }
