--- a/app/package.json
+++ b/app/package.json
@@ -11,8 +11,12 @@
     "@expo/webpack-config": "^0.17.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-masked-view/masked-view": "0.2.7",
+    "@react-navigation/bottom-tabs": "^6.3.2",
+    "@react-navigation/core": "^6.2.2",
     "@react-navigation/drawer": "^5.8.3",
-    "@react-navigation/native": "react-navigation/native",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.2",
     "axios": "^0.21.2",
     "expo": "^46.0.2",
@@ -32,8 +36,6 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
-    "react-navigation": "^4.3.9",
-    "react-navigation-tabs": "^2.8.13",
     "socket.io-client": "^2.3.0",
     "webpack-dev-server": "~3.11.0"
   },
